tests/dataset/tpc-ds/compiler/go/q38.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq382925360321/001/main.go:237:3: syntax error: unexpected keyword if after top level declaration
